syntax = "proto3";
package pb;

// Run protoc -I pb/ pb/centerms.proto --go_out=plugins=grpc:pb
// to generate centerms.pb.go

service DevService {
    rpc SaveDevData(SaveDevDataRequest) returns (SaveDevDataResponse) {}
}

message DevMeta {
    string type = 1;
    string name = 2;
    string mac = 3;
}

message SaveDevDataRequest {
    string action = 1;
    int64 time = 2;
    DevMeta meta = 3;
    bytes data = 4;
}
message SaveDevDataResponse {
    string status = 1;
}

message DevMetaResponse {
    string type = 1;
    string name = 2;
    string mac = 3;
}

message DevDataResponse {
    string site = 1;
    DevMetaResponse meta = 2;
    map<string, string> data = 3;
}
